--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "Active"
+name = "ACT-IV"
 version = "0.1.0"
 edition = "2021"
-description = "Active is an open source solution to the file synchronization problem."
+description = "ACT-IV is an open source solution to the file synchronization problem."
 readme = "README.org"
 license = "Apache-2.0"
 license-file = "LICENSE"
@@ -15,6 +15,8 @@ authors = [
 
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
+serde = { version = "1.0.216", features = ["derive", "std"] }
+toml = "0.8.19"
 
 [[bin]]
 name = "act"
