--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,17 @@ readme = "README.org"
 license-file = "LICENSE"
 repository = "https://gitlab.com/dynami/Active"
 homepage = "https://active.dynami.com/"
-authors = [
-    "EliottoDev",
-    "przock"
-]
+authors = [ "EliottoDev", "przock" ]
 
 [dependencies]
-chrono = "0.4.39"
 clap = { version = "4.5.23", features = ["derive"] }
-git2 = "0.20.0"
 serde = { version = "1.0.216", features = ["derive", "std"] }
+chrono = "0.4.39"
+git2 = "0.20.0"
 tabled = "0.17.0"
 toml = "0.8.19"
 walkdir = "2.5.0"
+tempfile = "3.15.0"
 
 [[bin]]
 name = "act"
