--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ tabled = "0.17.0"
 toml = "0.8.19"
 walkdir = "2.5.0"
 tempfile = "3.15.0"
+home = "0.5.11"
+rusqlite = "0.32.1"
 
 [[bin]]
 name = "act"
