--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ toml = "0.8.19"
 walkdir = "2.5.0"
 tempfile = "3.15.0"
 home = "0.5.11"
-rusqlite = "0.32.1"
+serde_yaml = "0.9.34"
 
 [[bin]]
 name = "act"
